# sh_integration

./: .clangd  .gitignore  .gitmodules  ExampleShitApp.sh  gen_crosscompile.sh  kindlehf.txt  kindlepw2.txt  meson.build  readme.md
.github/workflows/: main.yml
extractor/: main.c  main.cpp  main.scattered.c  meson.build  simple_sh_extractor.c  simple_sh_extractor.h  utils.c  utils.h
launcher/: main.c  main.cpp  meson.build
parser/: main.c  main.cpp  meson.build  simple_sh_parser.c  utils.h
stubs/: meson.build
stubs/libxml2/: libxml2.cpp  libxml2.h
stubs/lipc/: lipc.c  lipc.cpp  openlipc.h
stubs/scanner/: scanner.c  scanner.cpp  scanner.h
tests/: Check OTA status v1.1.sh  extractor.h  extractor_test_add_file.c  extractor_test_add_noicon_file.c  extractor_test_change_request.c  extractor_test_edgecases.c  extractor_test_remove_file.c  extractor_test_unknown_event.c  extractor_test_update_file.c  jb.sh runner.sh  launcher.h  launcher_test_edgecases.c  launcher_test_generate_command.c  launcher_test_go_callback.c  launcher_test_stub.c  launcher_test_unload_callback.c  meson.build  test.sh  testChangeRequest.c  testIndexFile.c  testRemoveFile.c  testUtils.c  test_fbink.sh  test_hooks.sh  test_hooks_fbink.sh  test_noicon.sh  utils_test.c
utils/: utils.c  utils.h
